src/antlr/aidlParser/AIDLParser.cpp

// Generated from AIDLParser.g4 by ANTLR 4.13.1


#include "AIDLParserVisitor.h"

#include "AIDLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AIDLParserStaticData final {
  AIDLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AIDLParserStaticData(const AIDLParserStaticData&) = delete;
  AIDLParserStaticData(AIDLParserStaticData&&) = delete;
  AIDLParserStaticData& operator=(const AIDLParserStaticData&) = delete;
  AIDLParserStaticData& operator=(AIDLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag aidlparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
AIDLParserStaticData *aidlparserParserStaticData = nullptr;

void aidlparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (aidlparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(aidlparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AIDLParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "identifier", "optional_package", "imports", "importI", 
      "qualified_name", "decls", "decl", "unannotated_decl", "type_params", 
      "optional_type_params", "optional_unstructured_headers", "parcelable_decl", 
      "parcelable_members", "variable_decl", "interface_decl", "interface_members", 
      "const_expr", "constant_value_list", "constant_value_non_empty_list", 
      "constant_decl", "enumerator", "enumerators", "enum_decl_body", "enum_decl", 
      "union_decl", "method_decl", "arg_non_empty_list", "arg", "non_array_type", 
      "type", "type_args", "annotation_list", "parameter", "parameter_non_empty_list", 
      "annotation", "direction"
    },
    std::vector<std::string>{
      "", "'abstract'", "'const'", "'enum'", "'extends'", "'implements'", 
      "'import'", "'interface'", "'package'", "'private'", "'protected'", 
      "'public'", "'return'", "'static'", "'void'", "'parcelable'", "'in'", 
      "'out'", "'inout'", "'oneway'", "'cpp_header'", "'ndk_header'", "'rust_type'", 
      "", "'union'", "'var'", "'yield'", "'record'", "'sealed'", "'permits'", 
      "'non-sealed'", "", "", "", "", "", "", "'true'", "'false'", "", "", 
      "", "'null'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
      "'.'", "'='", "'>'", "'<'", "'!'", "'~'", "'\\u003F'", "':'", "'=='", 
      "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", 
      "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'<<'", "'>>'", "'+='", 
      "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
      "'>>>='", "'->'", "'::'", "'...'"
    },
    std::vector<std::string>{
      "", "ABSTRACT", "CONST", "ENUM", "EXTENDS", "IMPLEMENTS", "IMPORT", 
      "INTERFACE", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", 
      "STATIC", "VOID", "PARCELABLE", "IN", "OUT", "INOUT", "ONEWAY", "CPP_HEADER", 
      "NDK_HEADER", "RUST_TYPE", "ANNOTATION", "UNION", "VAR", "YIELD", 
      "RECORD", "SEALED", "PERMITS", "NON_SEALED", "INTVALUE", "HEXVALUE", 
      "OCT_LITERAL", "BINARY_LITERAL", "FLOATVALUE", "HEX_FLOAT_LITERAL", 
      "TRUE_LITERAL", "FALSE_LITERAL", "CHARVALUE", "C_STR", "TEXT_BLOCK", 
      "NULL_LITERAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
      "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", 
      "QUESTION", "COLON", "EQUALITY", "LEQ", "GEQ", "NEQ", "LOGICAL_AND", 
      "LOGICAL_OR", "UNARY_PLUS", "UNARY_MINUS", "ADD", "SUB", "MUL", "DIV", 
      "BITAND", "BITOR", "CARET", "MOD", "LSHIFT", "RSHIFT", "ADD_ASSIGN", 
      "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
      "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
      "ARROW", "COLONCOLON", "ELLIPSIS", "WS", "COMMENT", "LINE_COMMENT", 
      "IDENTIFIER"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  aidlparserParserStaticData = staticData.release();
}

}

AIDLParser::AIDLParser(TokenStream *input) : AIDLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AIDLParser::AIDLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  AIDLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *aidlparserParserStaticData->atn, aidlparserParserStaticData->decisionToDFA, aidlparserParserStaticData->sharedContextCache, options);
}

AIDLParser::~AIDLParser() {
  delete _interpreter;
}

const atn::ATN& AIDLParser::getATN() const {
  return *aidlparserParserStaticData->atn;
}

std::string AIDLParser::getGrammarFileName() const {
  return "AIDLParser.g4";
}

const std::vector<std::string>& AIDLParser::getRuleNames() const {
  return aidlparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& AIDLParser::getVocabulary() const {
  return aidlparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AIDLParser::getSerializedATN() const {
  return aidlparserParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

AIDLParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AIDLParser::DeclsContext* AIDLParser::CompilationUnitContext::decls() {
  return getRuleContext<AIDLParser::DeclsContext>(0);
}

AIDLParser::Optional_packageContext* AIDLParser::CompilationUnitContext::optional_package() {
  return getRuleContext<AIDLParser::Optional_packageContext>(0);
}

AIDLParser::ImportsContext* AIDLParser::CompilationUnitContext::imports() {
  return getRuleContext<AIDLParser::ImportsContext>(0);
}


size_t AIDLParser::CompilationUnitContext::getRuleIndex() const {
  return AIDLParser::RuleCompilationUnit;
}


std::any AIDLParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::CompilationUnitContext* AIDLParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, AIDLParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AIDLParser::PACKAGE) {
      setState(74);
      optional_package();
    }
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AIDLParser::IMPORT) {
      setState(77);
      imports();
    }
    setState(80);
    decls();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

AIDLParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AIDLParser::IdentifierContext::IDENTIFIER() {
  return getToken(AIDLParser::IDENTIFIER, 0);
}

tree::TerminalNode* AIDLParser::IdentifierContext::CPP_HEADER() {
  return getToken(AIDLParser::CPP_HEADER, 0);
}

tree::TerminalNode* AIDLParser::IdentifierContext::NDK_HEADER() {
  return getToken(AIDLParser::NDK_HEADER, 0);
}

tree::TerminalNode* AIDLParser::IdentifierContext::RUST_TYPE() {
  return getToken(AIDLParser::RUST_TYPE, 0);
}


size_t AIDLParser::IdentifierContext::getRuleIndex() const {
  return AIDLParser::RuleIdentifier;
}


std::any AIDLParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::IdentifierContext* AIDLParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 2, AIDLParser::RuleIdentifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7340032) != 0) || _la == AIDLParser::IDENTIFIER)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Optional_packageContext ------------------------------------------------------------------

AIDLParser::Optional_packageContext::Optional_packageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AIDLParser::Optional_packageContext::PACKAGE() {
  return getToken(AIDLParser::PACKAGE, 0);
}

AIDLParser::Qualified_nameContext* AIDLParser::Optional_packageContext::qualified_name() {
  return getRuleContext<AIDLParser::Qualified_nameContext>(0);
}

tree::TerminalNode* AIDLParser::Optional_packageContext::SEMI() {
  return getToken(AIDLParser::SEMI, 0);
}


size_t AIDLParser::Optional_packageContext::getRuleIndex() const {
  return AIDLParser::RuleOptional_package;
}


std::any AIDLParser::Optional_packageContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitOptional_package(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::Optional_packageContext* AIDLParser::optional_package() {
  Optional_packageContext *_localctx = _tracker.createInstance<Optional_packageContext>(_ctx, getState());
  enterRule(_localctx, 4, AIDLParser::RuleOptional_package);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(AIDLParser::PACKAGE);
    setState(85);
    qualified_name();
    setState(86);
    match(AIDLParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportsContext ------------------------------------------------------------------

AIDLParser::ImportsContext::ImportsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AIDLParser::ImportIContext *> AIDLParser::ImportsContext::importI() {
  return getRuleContexts<AIDLParser::ImportIContext>();
}

AIDLParser::ImportIContext* AIDLParser::ImportsContext::importI(size_t i) {
  return getRuleContext<AIDLParser::ImportIContext>(i);
}


size_t AIDLParser::ImportsContext::getRuleIndex() const {
  return AIDLParser::RuleImports;
}


std::any AIDLParser::ImportsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitImports(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::ImportsContext* AIDLParser::imports() {
  ImportsContext *_localctx = _tracker.createInstance<ImportsContext>(_ctx, getState());
  enterRule(_localctx, 6, AIDLParser::RuleImports);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(88);
      importI();
      setState(91); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == AIDLParser::IMPORT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportIContext ------------------------------------------------------------------

AIDLParser::ImportIContext::ImportIContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AIDLParser::ImportIContext::IMPORT() {
  return getToken(AIDLParser::IMPORT, 0);
}

AIDLParser::Qualified_nameContext* AIDLParser::ImportIContext::qualified_name() {
  return getRuleContext<AIDLParser::Qualified_nameContext>(0);
}

tree::TerminalNode* AIDLParser::ImportIContext::SEMI() {
  return getToken(AIDLParser::SEMI, 0);
}


size_t AIDLParser::ImportIContext::getRuleIndex() const {
  return AIDLParser::RuleImportI;
}


std::any AIDLParser::ImportIContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitImportI(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::ImportIContext* AIDLParser::importI() {
  ImportIContext *_localctx = _tracker.createInstance<ImportIContext>(_ctx, getState());
  enterRule(_localctx, 8, AIDLParser::RuleImportI);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(AIDLParser::IMPORT);
    setState(94);
    qualified_name();
    setState(95);
    match(AIDLParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Qualified_nameContext ------------------------------------------------------------------

AIDLParser::Qualified_nameContext::Qualified_nameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AIDLParser::IdentifierContext *> AIDLParser::Qualified_nameContext::identifier() {
  return getRuleContexts<AIDLParser::IdentifierContext>();
}

AIDLParser::IdentifierContext* AIDLParser::Qualified_nameContext::identifier(size_t i) {
  return getRuleContext<AIDLParser::IdentifierContext>(i);
}

std::vector<tree::TerminalNode *> AIDLParser::Qualified_nameContext::DOT() {
  return getTokens(AIDLParser::DOT);
}

tree::TerminalNode* AIDLParser::Qualified_nameContext::DOT(size_t i) {
  return getToken(AIDLParser::DOT, i);
}


size_t AIDLParser::Qualified_nameContext::getRuleIndex() const {
  return AIDLParser::RuleQualified_name;
}


std::any AIDLParser::Qualified_nameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitQualified_name(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::Qualified_nameContext* AIDLParser::qualified_name() {
  Qualified_nameContext *_localctx = _tracker.createInstance<Qualified_nameContext>(_ctx, getState());
  enterRule(_localctx, 10, AIDLParser::RuleQualified_name);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(97);
    identifier();
    setState(102);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(98);
        match(AIDLParser::DOT);
        setState(99);
        identifier(); 
      }
      setState(104);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclsContext ------------------------------------------------------------------

AIDLParser::DeclsContext::DeclsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AIDLParser::DeclContext *> AIDLParser::DeclsContext::decl() {
  return getRuleContexts<AIDLParser::DeclContext>();
}

AIDLParser::DeclContext* AIDLParser::DeclsContext::decl(size_t i) {
  return getRuleContext<AIDLParser::DeclContext>(i);
}


size_t AIDLParser::DeclsContext::getRuleIndex() const {
  return AIDLParser::RuleDecls;
}


std::any AIDLParser::DeclsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitDecls(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::DeclsContext* AIDLParser::decls() {
  DeclsContext *_localctx = _tracker.createInstance<DeclsContext>(_ctx, getState());
  enterRule(_localctx, 12, AIDLParser::RuleDecls);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(105);
      decl();
      setState(108); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 25723016) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

AIDLParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AIDLParser::Annotation_listContext* AIDLParser::DeclContext::annotation_list() {
  return getRuleContext<AIDLParser::Annotation_listContext>(0);
}

AIDLParser::Unannotated_declContext* AIDLParser::DeclContext::unannotated_decl() {
  return getRuleContext<AIDLParser::Unannotated_declContext>(0);
}


size_t AIDLParser::DeclContext::getRuleIndex() const {
  return AIDLParser::RuleDecl;
}


std::any AIDLParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::DeclContext* AIDLParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 14, AIDLParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    annotation_list();
    setState(111);
    unannotated_decl();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unannotated_declContext ------------------------------------------------------------------

AIDLParser::Unannotated_declContext::Unannotated_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AIDLParser::Parcelable_declContext* AIDLParser::Unannotated_declContext::parcelable_decl() {
  return getRuleContext<AIDLParser::Parcelable_declContext>(0);
}

AIDLParser::Interface_declContext* AIDLParser::Unannotated_declContext::interface_decl() {
  return getRuleContext<AIDLParser::Interface_declContext>(0);
}

AIDLParser::Enum_declContext* AIDLParser::Unannotated_declContext::enum_decl() {
  return getRuleContext<AIDLParser::Enum_declContext>(0);
}

AIDLParser::Union_declContext* AIDLParser::Unannotated_declContext::union_decl() {
  return getRuleContext<AIDLParser::Union_declContext>(0);
}


size_t AIDLParser::Unannotated_declContext::getRuleIndex() const {
  return AIDLParser::RuleUnannotated_decl;
}


std::any AIDLParser::Unannotated_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitUnannotated_decl(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::Unannotated_declContext* AIDLParser::unannotated_decl() {
  Unannotated_declContext *_localctx = _tracker.createInstance<Unannotated_declContext>(_ctx, getState());
  enterRule(_localctx, 16, AIDLParser::RuleUnannotated_decl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AIDLParser::PARCELABLE: {
        enterOuterAlt(_localctx, 1);
        setState(113);
        parcelable_decl();
        break;
      }

      case AIDLParser::INTERFACE:
      case AIDLParser::ONEWAY: {
        enterOuterAlt(_localctx, 2);
        setState(114);
        interface_decl();
        break;
      }

      case AIDLParser::ENUM: {
        enterOuterAlt(_localctx, 3);
        setState(115);
        enum_decl();
        break;
      }

      case AIDLParser::UNION: {
        enterOuterAlt(_localctx, 4);
        setState(116);
        union_decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_paramsContext ------------------------------------------------------------------

AIDLParser::Type_paramsContext::Type_paramsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AIDLParser::IdentifierContext *> AIDLParser::Type_paramsContext::identifier() {
  return getRuleContexts<AIDLParser::IdentifierContext>();
}

AIDLParser::IdentifierContext* AIDLParser::Type_paramsContext::identifier(size_t i) {
  return getRuleContext<AIDLParser::IdentifierContext>(i);
}

std::vector<tree::TerminalNode *> AIDLParser::Type_paramsContext::COMMA() {
  return getTokens(AIDLParser::COMMA);
}

tree::TerminalNode* AIDLParser::Type_paramsContext::COMMA(size_t i) {
  return getToken(AIDLParser::COMMA, i);
}


size_t AIDLParser::Type_paramsContext::getRuleIndex() const {
  return AIDLParser::RuleType_params;
}


std::any AIDLParser::Type_paramsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitType_params(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::Type_paramsContext* AIDLParser::type_params() {
  Type_paramsContext *_localctx = _tracker.createInstance<Type_paramsContext>(_ctx, getState());
  enterRule(_localctx, 18, AIDLParser::RuleType_params);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    identifier();
    setState(124);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AIDLParser::COMMA) {
      setState(120);
      match(AIDLParser::COMMA);
      setState(121);
      identifier();
      setState(126);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Optional_type_paramsContext ------------------------------------------------------------------

AIDLParser::Optional_type_paramsContext::Optional_type_paramsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AIDLParser::Optional_type_paramsContext::LT() {
  return getToken(AIDLParser::LT, 0);
}

AIDLParser::Type_paramsContext* AIDLParser::Optional_type_paramsContext::type_params() {
  return getRuleContext<AIDLParser::Type_paramsContext>(0);
}

tree::TerminalNode* AIDLParser::Optional_type_paramsContext::GT() {
  return getToken(AIDLParser::GT, 0);
}


size_t AIDLParser::Optional_type_paramsContext::getRuleIndex() const {
  return AIDLParser::RuleOptional_type_params;
}


std::any AIDLParser::Optional_type_paramsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AIDLParserVisitor*>(visitor))
    return parserVisitor->visitOptional_type_params(this);
  else
    return visitor->visitChildren(this);
}

AIDLParser::Optional_type_paramsContext* AIDLParser::optional_type_params() {
  Optional_type_paramsContext *_localctx = _tracker.createInstance<Optional_type_paramsContext>(_ctx, getState());
  enterRule(_localctx, 20, AIDLParser::RuleOptional_type_params);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(AIDLParser::LT);
    setState(128);
    type_params();
    setState(129);
    match(AIDLParser::GT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Optional_unstructured_headersContext ------------------------------------------------------------------

AIDLParser::Optional_unstructured_headersContext::Optional_unstructured_headersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> AIDLParser::Optional_unstructured_headersContext::CPP_HEADER() {
  return getTokens(AIDLParser::CPP_HEADER);
}

tree::TerminalNode* AIDLParser::Optional_unstructured_headersContext::CPP_HEADER(size_t i) {
  return getToken(AIDLParser::CPP_HEADER, i);
}

std::vector<tree::TerminalNode *> AIDLParser::Optional_unstructured_headersContext::C_STR() {
  return getTokens(AIDLParser::C_STR);
}

tree::TerminalNode* AIDLParser::Optional_unstructured_headersContext::C_STR(size_t i) {
  return getToken(AIDLParser::C_STR, i);
}

std::vector<tree::TerminalNode *> AIDLParser::Optional_unstructured_headersContext::NDK_HEADER() {
  return getTokens(AIDLParser::NDK_HEADER);
}

tree::TerminalNode* AIDLParser::Optional_unstructured_headersContext::NDK_HEADER(size_t i) {
  return getToken(AIDLParser::NDK_HEADER, i);
}

std::vector<tree::TerminalNode *> AIDLParser::Optional_unstructured_headersContext::RUST_TYPE() {
  return getTokens(AIDLParser::RUST_TYPE);
}
